Update 2. signing and verify transactions.md

--- a/2. signing and verify transactions.md
+++ b/2. signing and verify transactions.md
@@ -36,7 +36,7 @@ sign_transaction get the address of receiver and the amount for the trnasaction,
 of the wallet owner, then it convert the signature into binary data and save it as hex string in the field of signatre. Now we can verify the transaction as following:
 
 ```rs
-pub fn verify_transaction(&self, transaction: &Transaction) -> bool {
+pub fn verify_transaction(transaction: &Transaction) -> bool {
         let signature_str = transaction.signature.clone();
         let signature_bin = hex::decode(signature_str).unwrap();
         let mut transaction_clone = transaction.clone();
@@ -57,8 +57,14 @@ pub fn verify_transaction(&self, transaction: &Transaction) -> bool {
                 return false;
             }
         };
-        self.verifying_key.verify(serialized, &signature).is_ok()
-   
+        let public_key_str = transaction_clone.public_key.clone();
+        let mut public_key_bin = hex::decode(public_key_str).unwrap();
+        /*
+        sec1 format is 0x04 || x coordinate of publick key || y coordinate of public key
+        */
+        public_key_bin.insert(0, 0x04);
+        let public_key = VerifyingKey::from_sec1_bytes(&public_key_bin).unwrap();
+        public_key.verify(serialized, &signature).is_ok()
     }
 ```
 In the above code, we get a reference of a transactin instance, since we need to change its content, therefore we need to clone a new one. Then we get the signature hex string, and convert it into binary data. One thing need to be noticed is
@@ -79,7 +85,7 @@ fn main() {
 
     let transaction = wallet.sign_transaction(&"0x1234567890".to_string(), 100);
     println!("transaction: {:?}", transaction); 
-    println!("verified: {}", wallet.verify_transaction(&transaction));
+    println!("verified: {}", Wallet::verify_transaction(&transaction));
 }
 ```
 Running the code above we can get result like following:
