Update 2. signing and verify transactions.md

--- a/2. signing and verify transactions.md
+++ b/2. signing and verify transactions.md
@@ -95,3 +95,11 @@ Running the code above we can get result like following:
 transaction: Transaction { sender: "1JWx6r5EqMY7uycq4HJWPKbAW9njdAX2pk", recipient: "0x1234567890", amount: 100, signature: "2737a12ae9566f088669bc005326fa9442fab543b4af51b844f8d2ff165420b4874e9093dea025f8cae2d5c3c091ae740ce2fb4c81bb70d82c7e4642ecaf2cf3" }
 verified: true
 ```
+
+Now let's see how to add a transaction to the blockchain, first we go into blockchain module, in its mod.rs, we import the wallet module as following:
+
+```rs
+use crate::wallet::{Transaction as WalletTransaction, Wallet};
+```
+
+Since there is alread a Transaction struct in the module,
