Update 2. signing and verify transactions.md

--- a/2. signing and verify transactions.md
+++ b/2. signing and verify transactions.md
@@ -102,4 +102,111 @@ Now let's see how to add a transaction to the blockchain, first we go into block
 use crate::wallet::{Transaction as WalletTransaction, Wallet};
 ```
 
-Since there is alread a Transaction struct in the module,
+Since there is alread a Transaction struct in the module, we need to prevent name confliction, then we change the add_transaction function for the blockchain as following:
+
+```rs
+ pub fn add_transaction(&mut self, tx: &WalletTransaction) -> bool{
+        if tx.sender == self.blockchain_address {
+            println!("miner cannot send money to himself");
+            return false;
+        }
+
+        //verify the transaction and add to the pool 
+        //except the reward from blockchain
+        if tx.sender != BlockChain::MINING_SENDER && !Wallet::verify_transaction(tx){
+            println!("invalid transaction");
+            return false;
+        }
+
+        //make sure sender has enough balance
+        if self.calculate_total_amount(tx.sender.clone()) < tx.amount as i64 {
+            println!("sender does not have enough balance");
+            return false;
+        }
+
+        let transaction = Transaction::new(
+        tx.sender.as_bytes().to_vec(), 
+        tx.recipient.as_bytes().to_vec(), 
+        tx.amount);
+
+        for tx_in_pool in self.transaction_pool.iter() {
+            if *tx_in_pool == transaction.serialization() {
+                break;
+            }
+        }
+
+        self.transaction_pool.push(transaction.serialization());
+        true
+    }
+```
+
+In the code above, we are adding transaction from wallet, it makes several checks then calling verify_transaction to verify the input transaction is legal or not, then it convert the transaction object from wallet to transaction
+object from blockchain module and add to the pool. Notice that, if the transaction is reward from blockchain, then we don't need to verify it. We also have code change in minging:
+
+```rs
+pub fn mining(&mut self) -> bool {
+        /*
+        if a block is mined, a transaction will created and the chain will send
+        a coin to the miner
+        */
+       
+        let tx = WalletTransaction{
+            sender: BlockChain::MINING_SENDER.clone().to_string(), 
+            recipient: self.blockchain_address.clone(),
+            amount: BlockChain::MINING_REWOARD,
+            public_key: "".to_string(),
+            signature: "".to_string(),
+        };
+           
+        self.add_transaction(&tx);
+
+        self.create_block(0, self.last_block().hash());
+
+        true
+    }
+```
+
+And finally we call above code in main.rs as following:
+
+```rs
+pub mod wallet;
+pub mod blockchain;
+use wallet::Wallet; 
+use blockchain::BlockChain;
+
+fn main() {
+let tx_a_b = wallet_a.sign_transaction(&wallet_b.get_address(), 100);
+    let mut blockchain = BlockChain::new(wallet_miner.get_address());
+    let is_add = blockchain.add_transaction(&tx_a_b);
+    println!("Added: {}", is_add);
+    blockchain.mining(); 
+    blockchain.print(); 
+    println!("A : {:?}\n", blockchain.calculate_total_amount(wallet_a.get_address()));
+    println!("B : {:?}\n", blockchain.calculate_total_amount(wallet_b.get_address()));
+    println!("Miner: {:?}\n", blockchain.calculate_total_amount(wallet_miner.get_address()));
+}
+```
+Running the code above, we get the following output:
+
+```rs
+sender does not have enough balance
+computing time: 156.41238ms,proof hash for current block is: "000d95c2a2c017fca310ca0e5231722ff6ac4e01db4c1fe138459498344eff17"
+========================= Chain 0  =========================
+timestamp: 1806f02c4248a210
+nonce:      0,
+previous_hash:    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+========================= Chain 1  =========================
+timestamp: 1806f02c424a5b78
+nonce:      743,
+previous_hash:    [233, 196, 124, 196, 231, 191, 214, 70, 128, 237, 182, 122, 0, 250, 83, 207, 160, 247, 65, 5, 220, 34, 170, 72, 100, 198, 177, 99, 253, 20, 233, 123]
+========================= Chain 2  =========================
+timestamp: 1806f02c481a3230
+nonce:      1153,
+previous_hash:    [0, 12, 250, 240, 117, 125, 168, 252, 157, 180, 108, 38, 106, 112, 126, 206, 184, 15, 34, 194, 141, 70, 94, 205, 159, 141, 97, 242, 12, 7, 251, 126]
+*************************
+A : 0
+
+B : 0
+
+Miner: 0
+```
